--- a/deploy/kubernetes/prometheus/grafana/grafana-deployment.yml
+++ b/deploy/kubernetes/prometheus/grafana/grafana-deployment.yml
@@ -21,11 +21,11 @@ spec:
          runAsGroup: 472
       containers:
         - name: grafana
-          image: grafana/grafana:main-ubuntu
+          image: grafana/grafana:8.5.15
           imagePullPolicy: IfNotPresent
           env:
             - name: GF_SECURITY_ADMIN_PASSWORD
-              value: tpg12345
+              value: helloworld
           ports:
             - containerPort: 3000
           volumeMounts:
