--- a/deploy/kubernetes/prometheus/prometheus/prometheus-config-map.yml
+++ b/deploy/kubernetes/prometheus/prometheus/prometheus-config-map.yml
@@ -12,13 +12,9 @@ data:
       evaluation_interval: 5s
 
     scrape_configs:
-      - job_name: 'tpg_cluster'
+      - job_name: 'node-exporter-acg-vms'
         static_configs:
-         - targets: ['10.223.90.111:9100', '10.223.90.112:9100','10.223.90.113:9100', '10.223.90.114:9100','10.223.90.115:9100']
-
-      - job_name: 'rf_cluster'
-        static_configs:
-         - targets: ['10.224.44.127:9100','10.224.45.83:9100']
+         - targets: ['2a5202caf11c.mylabserver.com:9100', '2a5202caf12c.mylabserver.com:9100','2a5202caf13c.mylabserver.com:9100']
     
       - job_name: 'kubernetes-apiservers'
         kubernetes_sd_configs:
