--- a/deploy/kubernetes/prometheus/prometheus/prometheus-deployment.yml
+++ b/deploy/kubernetes/prometheus/prometheus/prometheus-deployment.yml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: prometheus
           #image: prom/prometheus:latest
-          image: prom/prometheus:v2.33.0-rc.1
+          image: prom/prometheus:v2.40.1
           args:
             - "--config.file=/etc/prometheus/prometheus.yml"
             - "--storage.tsdb.path=/prometheus/"
